[gd_scene load_steps=3 format=2]

[ext_resource path="res://views/editor/common/spinbox/spinbox.tscn" type="PackedScene" id=1]
[ext_resource path="res://views/editor/inspector/vector3_property.gd" type="Script" id=2]

[node name="Vector3Property" type="VBoxContainer"]
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_right = 301.0
margin_bottom = 25.0
text = "Vector3"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_top = 33.0
margin_right = 301.0
margin_bottom = 57.0

[node name="SpinBox" parent="HBoxContainer" instance=ExtResource( 1 )]
spinbox_name = "X"
decrease_button = NodePath("../../../Vector3Property/HBoxContainer/SpinBox/SpinBoxContainer/Decrease")
increase_button = NodePath("../../../Vector3Property/HBoxContainer/SpinBox/SpinBoxContainer/Increase")

[node name="SpinBox2" parent="HBoxContainer" instance=ExtResource( 1 )]
margin_left = 103.0
margin_right = 198.0
spinbox_name = "Y"
decrease_button = NodePath("../../../Vector3Property/HBoxContainer/SpinBox2/SpinBoxContainer/Decrease")
increase_button = NodePath("../../../Vector3Property/HBoxContainer/SpinBox2/SpinBoxContainer/Increase")

[node name="SpinBox3" parent="HBoxContainer" instance=ExtResource( 1 )]
margin_left = 206.0
margin_right = 301.0
spinbox_name = "Z"
